[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketminer-pro"
version = "2.0.0"
description = "Advanced FFXI Auction House Data Mining Tool for FFXIAH.com"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TimelessXI"}
]
keywords = ["ffxi", "final-fantasy-xi", "auction-house", "ffxiah", "scraper", "market-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "customtkinter>=5.2.0",
]

[project.urls]
"Homepage" = "https://github.com/TimelessXI/MarketMiner"
"Bug Reports" = "https://github.com/TimelessXI/MarketMiner/issues"
"Source" = "https://github.com/TimelessXI/MarketMiner"

[project.gui-scripts]
marketminer = "market_miner.__main__:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["market_miner*"]
exclude = ["tests*", "venv*", "output*"]

[tool.setuptools.package-data]
"market_miner" = ["*.txt", "*.md"]